Fix dark mode

--- a/src/sass/components/vitessce.scss
+++ b/src/sass/components/vitessce.scss
@@ -34,3 +34,21 @@ html {
 .vitessce-container.vitessce-theme-light .scroll {
   overflow-y: auto;
 }
+
+.vitessce-container.vitessce-theme-dark .bg-secondary {
+  background-color: #222 !important;
+  color: #d3d3d3;
+}
+
+.vitessce-container.vitessce-theme-dark .bg-primary {
+  background-color: #222 !important;
+  color: #d3d3d3;
+}
+
+.vitessce-container.vitessce-theme-dark .card {
+  border: 1px solid rgba(241,241,241,.125);
+}
+
+.vitessce-container.vitessce-theme-dark .scroll {
+  overflow-y: auto;
+}
